.idea settings for Clion
I personally use Jetbrains CLion as a main IDE.
Files in .idea folder are for convenience only.
You can always use the plain cmake to build the project.

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,19 @@ docs/_build
 #==============================================================================#
 bindings/go/llvm/llvm_config.go
 bindings/go/llvm/workdir
+
+
+## jetbrains
+
+# User-specific stuff:
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
+
+# Sensitive or high-churn files:
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
